# sierra-ils-utils

./: .gitignore  CLAUDE.md  HOWTO_update_pypi.md  LICENSE  README.md  TODO.md  cloc_report.md  generate_cloc_report.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sierra_query_builder_v2.ipynb
docs/: index.md
misc/: RecordDateRange_test.ipynb  chat_gpt_workflow.md  current_collection-a9be2bf.csv  current_collection-f1db491.csv  dev_requirements.txt  get_bib.ipynb  get_holds.ipynb  patron_testing.ipynb  query_builder_results_test.txt  sierra_ils_utils_Bulk_Holds.ipynb  sierra_query_builder.ipynb  sierra_query_builder_v2.ipynb  sierra_query_builder_v3.ipynb  simple_use_example.ipynb  test_bib_query.ipynb  test_bibs_response.ipynb  test_logging.ipynb  test_models.ipynb  test_sierra_ils_utils.ipynb  testing.ipynb
scripts/: check-docs-clean.sh  probe-varfield-write-semantics.py  test-check-docs-clean.sh
sierra_ils_utils/: __init__.py  decorators.py  sierra_api_v6_endpoints.py  sierra_api_v6_models.py  sierra_datetime.py  sierra_get_max_id.py  sierra_ils_utils.py  sierra_rest_client.py  utils.py
tests/: _test_2.py  conftest.py  patrons-1.json  sierra_query_builder.ipynb  test_JsonManipulator.py  test_JsonManipulator_methods.py  test_SierraAPIv6_Patron.py  test_SierraAPIv6_RecordDateRange.py  test_SierraAPIv6_endpoints_dates.py  test_SierraAPIv6_get.py  test_SierraAPIv6_init_and_auth.py  test_decorators.py  test_get_volumes.py  test_hybrid_retry_decorator.py  test_set1.py  test_sierra_api_v6_endpoints_BibResultSet.py  test_sierra_datetime.py  (+7 more)
(+21 files in other folders)
